<resources>
    <string name="app_name">SmartRecord</string>
    <string name="record">Record</string>

    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="grant_permission">Please grant those permissions to continue using this app!</string>
    <string name="list_type">Microphone, Storage, Location, Internet</string>

    <string name="title_home">Home</string>
    <string name="title_folder">Folder</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_trash">Trash</string>
    <string name="title_variation_page">Change the sound</string>
    <string name="title_variation">Sound variation</string>
    <string name="title_character_default">Default</string>
    <string name="title_character_buffalo">Buffalo</string>
    <string name="title_character_child">Child</string>
    <string name="title_character_old_man">Old man</string>

    <string name="add_remind">Add a reminder</string>
    <string name="rename">Rename</string>
    <string name="rename_file_dialog">Rename file</string>
    <string name="convert_file">Convert file format</string>
    <string name="move_file_to">Move to...</string>
    <string name="announce_ok">OK</string>

    <string name="sort_by">Sort by</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_size">Size</string>

    <string name="title_search">Search</string>
    <string name="question_delete">Are you sure you want to move it to the trash?</string>
    <string name="question_divide">Are you sure you want to divide it?</string>
    <string name="question_save">Are you sure you want to save?</string>
    <string name="announce_moved_successfully">Successfully moved to trash!</string>
    <string name="announce_save_successfully">Successfully save!</string>
    <string name="announce_moved_unsuccessfully">Move to trash failed!</string>
    <string name="announce_deleted_successfully">Deleted successfully!</string>
    <string name="announce_deleted_unsuccessfully">Deleted unsuccessfully!</string>
    <string name="announce_restored_successfully">Restored successfully!</string>
    <string name="announce_restored_unsuccessfully">Restored unsuccessfully!</string>
    <string name="announce_data_not_found">Data not found!</string>

    <string name="question_move">Are you sure you want to move it to the private folder?</string>
    <string name="announce_moved_private_successfully">Successfully moved to private folder!</string>
    <string name="announce_moved_private_unsuccessfully">Move to private folder failed!</string>
    <string name="announce_divide_successfully">Divide successfully!</string>

    <string name="announce_notify_warning_len_null">You are not select any directory!</string>

    <string name="question_restored">Are you sure you want to restore?</string>
    <string name="question_delete_permanently">Are you sure you want to permanently delete?</string>
    <string name="annouce_file_not_exist">File does not exist!</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>

    <string-array name="rangeSlider">
        <item>20</item>
        <item>70</item>
    </string-array>

    <string name="language">Language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="type_of_file">File format</string>

    <string name="settings">Settings</string>
    <string name="general_settings">GENERAL SETTING</string>
    <string name="theme">Theme</string>
    <string name="password">Password</string>
    <string name="file">File</string>
    <string name="format">Format</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="reminder">REMINDER</string>
    <string name="expected_reminder">Expected reminder</string>
    <string name="finished_reminder">Finished</string>
    <string name="voice_to_text">Voice to text</string>
    <string name="convert">Convert</string>
    <string name="summary">Summary</string>
    <string name="error_convert_voice_to_text">Error, please try again!</string>
    <string name="api_free">Free API does not support</string>

    <string name="insertion">Insertion</string>
    <string name="folder_private_title">Private folder</string>

    <string name="demo_min_label"></string>
    <string name="demo_max_label"></string>
    <string name="record_title">Recording</string>
    <string name="replay_title">Replay</string>
    <string name="combine_title">Combine</string>
    <string name="combine_cancel">Clear</string>
    <string name="menu_title">Recording Studio</string>
    <string name="add_successfull">Successful Add</string>
    <string name="remove_file">File is deleted</string>
    <string name="save_file">Saved_</string>
    <string name="save_announce">Save</string>
    <string name="save_record_announce">Save Record</string>
    <string name="delete_announce">Delete</string>
    <string name="YN_save_announce">Do you want to save record?</string>
    <string name="resume_announce">Resume</string>
    <string name="pause_announce">Pause</string>
    <string name="repeat_mode">Repeat Mode</string>
    <string name="cancel_repeat_mode">Cancel Repeat Mode</string>
    <string name="combine_YN">Do you want to combine?</string>
    <string name="harmonic_YN">Do you want to harmonic?</string>
    <string name="cut_YN">Do you want to cut?</string>
    <string name="cut_title">Cut</string>
    <string name="combine_success">Successfully Combine</string>
    <string name="cancel_announce">Cancel</string>
    <string name="record_announce">Record...</string>
    <string name="broadcast_title">Recording in progress</string>
    <string name="broadcast_action">Tap to stop recording</string>
    <string name="add_file_announce">You can only add file once!</string>

    <string name="converting">Converting...</string>
    <string name="loading">Loading...</string>
    <string name="only_mp3">Only concat .mp3</string>

    <string name="folder">\ Folder -\ </string>
    <string name="folder_day">Day</string>
    <string name="folder_name">Name</string>
    <string name="folder_size">Size</string>
    <string name="folder_filter_title">Sort by</string>
    <string name="folder_file">\ files -\ </string>
    <string name="folder_create_folder">Create folder</string>
    <string name="folder_create_folder_hint">Input name folder</string>
    <string name="folder_create_password">Create password</string>
    <string name="folder_password_hint">Input password</string>
    <string name="folder_more_menu_title">Select</string>
    <string name="folder_more_menu_item_rename">Rename</string>
    <string name="folder_multi_choice">Select all</string>

    <string name="adjust_title">Adjust</string>
    <string name="adjust_foolproof">Foolproof</string>
    <string name="adjust_volume">Volume</string>
    <string name="adjust_speed">Speed</string>

    <string name="modal_multi_folder_private">Move private folder</string>
    <string name="modal_multi_restore">Restore</string>
    <string name="harmonic_title">Harmonic</string>
    <string name="harmonic_success">Successfully Harmonic</string>
    
    <string name="select_folder_title">Select folder</string>

    <string name="rename_folder_question">Are you sure you want to change the folder name to\ </string>
    <string name="rename_success">Rename successfully</string>
    <string name="rename_fail">Rename fail!</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_folder_hint">Input new name folder</string>

    <string name="cut_success">Cut file successfully! Saved with name </string>
    <string name="cut_fail">This audio clip has been cut before! Please try again!</string>

    <string name="create_folder_success">Create successfully</string>
    <string name="create_folder_exist">Folder name already exists</string>
    <string name="create_folder_warning">You have not entered the folder name</string>

    <string name="folder_password_warning">You have not entered the password</string>
    <string name="folder_password_create_success">Create password successfully</string>
    <string name="folder_password_fail">Password wrong</string>

    <string name="question_move_folder">Are you sure you want to move into this folder?</string>
    <string name="announce_moved_folder_successfully">Successfully moved to new folder</string>
    <string name="announce_moved_folder_fail">Fail moved to new folder</string>

    <string name="announce_no_file_add">No file chosen</string>
    <string name="divide_title">Divide</string>
    <string name="add_label">Add</string>
    <string name="add_file">Add File</string>

    <string name="insert_not_file">The file to be inserted has not been selected</string>
    <string name="search_not_found">No matching results were found</string>

    <string name="insert_warning_insertfile">You have not marked the split start time, Please stop the recording to mark</string>
    <string name="inserted">Inserted!</string>
</resources>