<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.devapp.smartrecord.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_folder"
        android:name="com.devapp.smartrecord.ui.folder.FolderFragment"
        android:label="@string/title_folder"
        tools:layout="@layout/fragment_folder" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.devapp.smartrecord.ui.alarm.AlarmFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/navigation_trash"
        android:name="com.devapp.smartrecord.ui.trash.TrashFragment"
        android:label="@string/title_trash"
        tools:layout="@layout/fragment_trash" />

</navigation>