<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="bottom"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/home_sort_item_above"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_radius_white_sort_type_home"
        android:layout_marginHorizontal="6dp"
        >

        <TextView
            android:id="@+id/home_sort_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?attr/textColor"
            android:gravity="center"
            android:text="@string/sort_by"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_solid_bottom_item_home"
            />

        <TextView
            android:id="@+id/home_sort_item_by_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20dp"
            android:textColor="@color/pink_500"
            android:text="@string/sort_by_date"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_solid_bottom_item_home"
            />

        <TextView
            android:id="@+id/home_sort_item_by_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20dp"
            android:textColor="@color/pink_500"
            android:text="@string/sort_by_name"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_solid_bottom_item_home"
            />

        <TextView
            android:id="@+id/home_sort_item_by_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/pink_500"
            android:text="@string/sort_by_size"
            android:padding="20dp"
            android:gravity="center"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/home_sort_item_by_destroy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="6dp"
        android:padding="18dp"
        android:textSize="20dp"
        android:textColor="@color/pink_500"
        android:text="@string/cancel_announce"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/bg_radius_white_sort_type_home"
        android:layout_below="@+id/home_sort_item_above"
        />
</RelativeLayout>