<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_menu_folder"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="550dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:background="@drawable/bg_radius_white_filter_folder">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/add_file"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listView_show_note"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:textCursorDrawable="@null"
            android:background="@drawable/bg_edt_private_folder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_solid_bottom_filter_folder"
            android:layout_marginTop="3dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/combine_modal_destroy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/pink_500"
                android:paddingVertical="12dp"
                android:text="@string/cancel_announce"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:paddingVertical="12dp"
                android:background="@drawable/bg_solid_right_folder"
                />

            <TextView
                android:id="@+id/combine_modal_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/pink_500"
                android:text="@string/add_label"
                android:paddingVertical="12dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>