<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/backgroundColor"
        >
        <LinearLayout
            android:id="@+id/action_bar_voice_to_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="?attr/actionBarColor" >
            <ImageButton
                android:id="@+id/voice_to_text_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:background="?attr/actionBarColor"
                android:elevation="0dp"
                android:outlineProvider="none"
                android:src="@drawable/ic_back" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/voice_to_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="30dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/img_bg_voice_to_text" />

            <TextView
                android:id="@+id/btn_choice_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColorPrimary"
                android:layout_margin="24dp"
                android:textSize="16dp"
                android:textStyle="italic"
                android:text="@string/vietnamese" />

            <TextView
                android:id="@+id/btn_convert_voice_to_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_voice_to_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:text="@string/convert"
                tools:ignore="RtlCompat" />
        </LinearLayout>

    </LinearLayout>

    <!-- Adding bottom sheet after main content -->
    <!--    <include layout="@layout/bottom_sheet_language_setting" />-->

</androidx.constraintlayout.widget.ConstraintLayout>