<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/backgroundColor"
        >
        <LinearLayout
            android:id="@+id/action_bar_voice_to_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="?attr/actionBarColor" >
            <ImageButton
                android:id="@+id/voice_to_text_result_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:background="?attr/actionBarColor"
                android:elevation="0dp"
                android:outlineProvider="none"
                android:src="@drawable/ic_back" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/voice_to_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="30dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="54dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_global" />

                <TextView
                    android:id="@+id/btn_choice_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/vietnamese"
                    android:textColor="?attr/textColorPrimary"
                    android:textSize="16dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/btn_summary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pink_500"
                    android:textSize="16sp"
                    android:textAlignment="textEnd"
                    android:gravity="center_vertical"
                    android:text="@string/summary"
                    android:layout_weight="1"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <TextView
                android:id="@+id/tw_data_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Đang xử lý"
                android:textSize="16dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?attr/foregroundColor"
            android:layout_weight="1"
            android:orientation="vertical">
            <SeekBar
                android:id="@+id/voice_text_seekbar"
                android:layout_width="match_parent"
                android:layout_height="11dp"
                android:thumb="@drawable/ic_thumb_seekbar"
                android:indeterminate="false"
                android:max="100"
                android:progress="30"
                android:layout_marginBottom="8dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/bg_progressbar"
                android:progressTint="@color/pink_500"
                android:progressDrawable="@drawable/replay_prb_custom"
                android:layout_weight="9"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tw_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="00:12" />
                <TextView
                    android:id="@+id/tw_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="00:00" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="24dp">
<!--                <ImageView-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:src="@drawable/ic_upload"-->
<!--                    tools:ignore="RtlCompat" />-->
                <ImageView
                    android:id="@+id/btn_play_text"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:src="@drawable/ic_play"/>
<!--                <ImageView-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:src="@drawable/ic_reconvert"-->
<!--                    tools:ignore="RtlCompat" />-->
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>